# 02476_mlops_exercises

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_test.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/state_dicts/: MNISTModel.pth
src/mlops_02476_exercises/: data.py  model.py  predict.py  train.py  visualize.py
src/mlops_02476_exercises/data/: make_dataset.py
tests/: test_data.py
